# vibe-kanban

./: package-lock.json  package.json
crates/server/src/: main.rs
frontend/: package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
